remove extra scrollbar and make toc fixed

--- a/src/main/content/_assets/css/commonConfigFeature.css
+++ b/src/main/content/_assets/css/commonConfigFeature.css
@@ -95,7 +95,7 @@ html, body, main {
 }
 
 /* hide scrollbar in chrome, firefox, safari, and IE */
-#feature_content, #command_content, #general_content, #toc_column {
+#feature_content, #command_content, #toc_column {
     overflow: hidden;
     height: 100%;
 }
