--- a/src/main/content/_assets/css/general-reference.scss
+++ b/src/main/content/_assets/css/general-reference.scss
@@ -9,10 +9,6 @@
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
 
- #background_container {
-    height: 1500px; /* initial height */
-}
-
 /* table of contents styling */
 
 #toc_column {
@@ -20,11 +16,23 @@
     padding-top: 20px;
     padding-bottom: 20px;
     padding-left: 0px;
+    overflow-y: scroll;
+}
+
+#toc_inner {
+    margin-right: 0px;
+    padding-right: 0px;
+    @media (min-width: 767px) {
+        position: fixed;
+        width: 25%;
+        max-height: calc(100% - 121px);
+    }
 }
 
 .toc_selected {
     padding-left: 22px !important;
     margin-left: -30px;
+    margin-right: 0px;
 }
 
 #toc_column ul li div[href]:hover {
@@ -40,11 +48,6 @@
 }
 
 /* content styling */
-#general_content {
-    height: 100%;
-    overflow: hidden;
-}
-
 #general_content:focus {
     outline: none;
 }
